--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@boraaonur/chrome-storage-utils",
-  "version": "1.0.0",
+  "name": "@boraaonur/chrome-extension-utils",
+  "version": "1.0.1",
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -9,13 +9,17 @@
     "dist"
   ],
   "scripts": {
-    "start": "tsc && node dist/index.js"
+    "build": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/chrome": "^0.0.243"
+    "@types/chrome": "^0.0.243",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "typescript": "^5.1.6"
